# rust-kahypar

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  README.md  THIRD_PARTY  build.rs
kahypar/: Cargo.toml  LICENSE-MIT  README.md
kahypar-sys/: Cargo.toml  README.md  build.rs
kahypar-sys/src/: lib.rs
kahypar/src/: lib.rs
src/: lib.rs
