[package]
name = "kahypar-sys"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
description = "A wrapper to the C++ interface of KaHyPar (Karlsruhe Hypergraph Partitionining) library."
license = "MIT"
repository = "https://gitlab.lrz.de/quantum-research/kahypar-sys"
keywords = ["kahypar", "hypergraph partitioning"]
categories = ["api-bindings", "science"]
links = "kahypar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"
cmake = "0.1.50"
