[package]
name = "kahypar-sys"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
description = "A wrapper to the C++ interface of the KaHyPar (Karlsruhe Hypergraph Partitionining) library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ectras/rust-kahypar.git"
keywords = ["kahypar", "hypergraph", "partitioning"]
categories = ["external-ffi-bindings", "science", "algorithms"]
links = "kahypar"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"
cmake = "0.1.50"
